# jd-turnover-automation

./: Dockerfile  deploy.sh  pyproject.toml  render.yaml
output/: test_output.xlsx
src/jd_turnover/: __init__.py  config.py  main.py
src/jd_turnover/data/: cleaner.py  loader.py
src/jd_turnover/output/: reporter.py
src/jd_turnover/processing/: turnover.py
src/jd_turnover/static/: app.js  style.css
src/jd_turnover/templates/: index.html
