[project]
name = "jd-turnover-automation"
version = "0.1.0"
description = "京东自营周转数据自动化处理"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
